--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       	<h2>Awesome Free PSD templates & Resources</h2>
       	<div class="pet">1212</div>
       	<span>www.BlazRobar.com</span>
-      </div>s
+      </div>
     </div>
     <div class="container"> 
       <div class="row">
