--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 		<link rel='stylesheet' href='css/normalize.css' type='text/css'>
 		<link rel="stylesheet" href="css/style.css" type="text/css">
 		<link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
-	</head>
+  </head>
 	<body>
 		<div class="container"> 
       <div class="row">
@@ -16,23 +15,29 @@
         <div class="col-xs-2"><img src="img/pict/slider_image3.jpg" alt=""/></div>
       </div>
     </div>
-    <div class="container"> 
+    <div class="container aqua"> 
       <div class="row">
-      	<h2>Awesome Free PSD templates & Resources</h2>
-      	<div class="pet">1212</div>
-      	<span>www.BlazRobar.com</span>
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      	<h2>Awesome Free PSD templates & Resources</h2></div>
+      	<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><h4>www.BlazRobar.com</h4></div>
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3"> > </div>
       </div>
     </div>
-    <div class="container"> 
+    <div class="container psd-files"> 
       <div class="row">
-      	
+      	<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9 gray">
+          <span>I'm like the Robin Hood of PSD files</span>
+        </div>
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 crimson">
+          >
+        </div>
       </div>
     </div>
-    <div class="container img"> 
+    <div class="container img-range"> 
       <div class="row">
       	<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 bar">
       		<a href="#">
-      	   	<div class="rectangle">> <!--    <img src="img/pict/purpur.png" alt="">   --></div> 
+      	   	<div class="rectangle"><img src="img/pict/purpur.png" alt="" class="img-responsive"> <!--  >     --></div> 
 	       	</a>
 	      </div>
       	<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 bar"><img src="img/pict/citi.jpg" class="img-responsive" alt="Responsive image"></div>
@@ -56,7 +61,7 @@
 
 	
 
-    	
+    	<div class="pet">1212</div>
 	</body>
 	<!--
 http://www.blazrobar.com/
