--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet" type="text/css"/>
   </head>
 	<body>
-		<div class="container"> 
+		<div class="container navigation"> 
       <div class="row">
         <div class="col-xs-10"><span>Navigation</span></div>
         <div class="col-xs-2"><img src="img/pict/slider_image3.jpg" alt=""/></div>
