--- a/index.html
+++ b/index.html
@@ -9,18 +9,48 @@
 		<link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet" type="text/css"/>
   </head>
 	<body>
-		<div class="container navigation"> 
+		<div class="container navigation">
+      <div class="row">
+        <nav id="myNavbar" class="navbar navbar-default" role="navigation">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">Navigation</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <li><a href="#">PSD WEBSITE</a></li>
+                <li><a href="#">UI KITS</a></li>
+                <li><a href="#">PREMIUM PSD FILES</a>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">BLOG</a></li>
+              </ul>
+            </div><!-- /.navbar-collapse -->
+          </div>
+        </nav>
+      </div>
+    </div>
+<!--
+<div class="container navigation"> 
       <div class="row">
         <div class="col-xs-10"><span>Navigation</span></div>
         <div class="col-xs-2"><img src="img/pict/slider_image3.jpg" alt=""/></div>
       </div>
     </div>
+-->
+
+
     <div class="container aqua"> 
       <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
       	<h2>Awesome Free PSD templates & Resources</h2></div>
       	<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><h4>www.BlazRobar.com</h4></div>
-        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3"> > </div>
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3"> &#062 </div>
       </div>
     </div>
     <div class="container psd-files"> 
@@ -29,7 +59,7 @@
           <span>I'm like the Robin Hood of PSD files</span>
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 crimson">
-          >
+          &#062
         </div>
       </div>
     </div>
@@ -60,10 +90,9 @@
     </div>
 
 	
-
     	<div class="pet">1212</div>
 	</body>
-	<!--
+	<!-- <div class="pet">1212</div>
 http://www.blazrobar.com/
 
 http://font-family.ru/luchshie-besplatnye-psd-makety-sajtov-dlya-verstki/
