--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   </head>
 	<body>
-		<div class="container new">
+		<div class="container">
       <div class="row">
         <nav id="myNavbar" class="navbar navbar-default" role="navigation">
           <div class="container navigation">
