--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   </head>
 	<body>
-		<div class="container">
+		<div class="container new">
       <div class="row">
-        <nav id="myNavbar" class="navbar navbar-default" role="navigation">
+        <nav id="navbar" class="navbar navbar-default " role="navigation">
           <div class="container navigation">
             <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Navigation</a>
+              <a class="navbar-brand" href="#" id="navbar-name">Navigation</a>
             </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse " id="navbar-collapse-1">
               <ul class="nav navbar-nav">
                 <li><a href="#">PSD WEBSITE</a></li>
                 <li><a href="#">UI KITS</a></li>
@@ -32,27 +32,20 @@
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="#">BLOG</a></li>
               </ul>
-            </div><!-- /.navbar-collapse -->
+            </div>
           </div>
         </nav>
       </div>
     </div>
-<!--
-<div class="container navigation"> 
-      <div class="row">
-        <div class="col-xs-10"><span>Navigation</span></div>
-        <div class="col-xs-2"><img src="img/pict/slider_image3.jpg" alt=""/></div>
-      </div>
-    </div>
--->
-
-
     <div class="container aqua"> 
       <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <div class="col-xs-11 col-sm-11 col-md-11 col-lg-11 col-xs-offset-1 col-sm-offset-1 
+      col-md-offset-1 col-lg-offset-1">
       	<h2>Awesome Free PSD templates & Resources</h2></div>
-      	<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><h4>www.BlazRobar.com</h4></div>
-        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3"> &#062 </div>
+      	<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 col-xs-offset-1 col-sm-offset-1 
+        col-md-offset-1 col-lg-offset-1"><h4>www.BlazRobar.com</h4></div>
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xs-offset-3 col-sm-offset-3 
+        col-md-offset-3 col-lg-offset-3"> <span>&#062</span> </div>
       </div>
     </div>
     <div class="container psd-files"> 
@@ -69,25 +62,36 @@
       <div class="row">
       	<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 bar">
       		<a href="#">
-      	   	<div class="rectangle"><img src="img/pict/purpur.png" alt="" class="img-responsive"> <!--  >     --></div> 
+      	   	<div class="rectangle"><img src="img/pict/purpur.png" alt="" class="img-responsive"></div> 
 	       	</a>
 	      </div>
-      	<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 bar"><img src="img/pict/citi.jpg" class="img-responsive" alt="Responsive image"></div>
-      	<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 bar"><img src="img/pict/girl.jpg" class="img-responsive" alt="Responsive image"></div>
+      	<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 bar "><img src="img/pict/citi.jpg" 
+        class="img-responsive" alt="Responsive image"></div>
+      	<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 bar"><img src="img/pict/girl.jpg" 
+        class="img-responsive" alt="Responsive image"></div>
       </div>
     </div>
     <div class="container text"> 
       <div class="row">
       	<h2>BlazRobar.com</h2>
       	<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-      		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vehicula ipsum non leo tristique eget facilisis lacus commodo. Curabitur vitae justo lorem, non ornare nibh. Pellentesque pretium, tellus ac ultrices faucibus, nibh mauris dapibus lorem, vitae viverra nisl elit sit amet libero. Nam eu blandit risus.</p>
-      		<p>Phasellus imperdiet mattis nulla. Integer gravida imperdiet congue. Proin vitae pretium augue. Donec est sem, mattis et blandit ac, blandit at arcu. Donec tempus tincidunt suscipit. Suspendisse eu vulputate lacus.</p>
+      		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vehicula ipsum non leo 
+          tristique eget facilisis lacus commodo. Curabitur vitae justo lorem, non ornare nibh. 
+          Pellentesque pretium, tellus ac ultrices faucibus, nibh mauris dapibus lorem, vitae 
+          viverra nisl elit sit amet libero. Nam eu blandit risus.</p>
+      		<p>Phasellus imperdiet mattis nulla. Integer gravida imperdiet congue. Proin vitae pretium
+           augue. Donec est sem, mattis et blandit ac, blandit at arcu. Donec tempus tincidunt 
+           suscipit. Suspendisse eu vulputate lacus.</p>
       	</div>
       	<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-      		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vehicula ipsum non leo tristique eget facilisis lacus commodo. Curabitur vitae justo lorem, non ornare nibh. Pellentesque pretium, tellus ac ultrices faucibus, nibh mauris dapibus lorem, vitae viverra nisl elit sit amet libero. Nam eu blandit risus.</p>
-      		<p>Phasellus imperdiet mattis nulla. Integer gravida imperdiet congue. Proin vitae pretium augue. Donec est sem, mattis et blandit ac, blandit at arcu. Donec tempus tincidunt suscipit. Suspendisse eu vulputate lacus.</p>
+      		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vehicula ipsum non leo 
+          tristique eget facilisis lacus commodo. Curabitur vitae justo lorem, non ornare nibh. 
+          Pellentesque pretium, tellus ac ultrices faucibus, nibh mauris dapibus lorem, vitae 
+          viverra nisl elit sit amet libero. Nam eu blandit risus.</p>
+      		<p>Phasellus imperdiet mattis nulla. Integer gravida imperdiet congue. Proin vitae pretium
+           augue. Donec est sem, mattis et blandit ac, blandit at arcu. Donec tempus tincidunt 
+           suscipit. Suspendisse eu vulputate lacus.</p>
       	</div>
-      	
       </div>
     </div>
 
@@ -100,3 +104,15 @@ http://www.blazrobar.com/
 http://font-family.ru/luchshie-besplatnye-psd-makety-sajtov-dlya-verstki/
 	-->
 </html>
+
+
+
+
+
+
+<!--    Адаптивные Вспомогатели
+
+
+http://bootstrap-3.ru/css.php#responsive-utilities
+
+ -->
