--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     </div>
     <div class="container psd-files"> 
       <div class="row">
-      	<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9 gray">
+      	<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xs-offset-1 col-sm-offset-1 
+        col-md-offset-1 col-lg-offset-1 gray">
           <span>I'm like the Robin Hood of PSD files</span>
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 crimson">
@@ -71,27 +72,31 @@
         class="img-responsive" alt="Responsive image"></div>
       </div>
     </div>
-    <div class="container text"> 
+    <div class="container text-block"> 
       <div class="row">
-      	<h2>BlazRobar.com</h2>
-      	<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-      		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vehicula ipsum non leo 
-          tristique eget facilisis lacus commodo. Curabitur vitae justo lorem, non ornare nibh. 
-          Pellentesque pretium, tellus ac ultrices faucibus, nibh mauris dapibus lorem, vitae 
-          viverra nisl elit sit amet libero. Nam eu blandit risus.</p>
-      		<p>Phasellus imperdiet mattis nulla. Integer gravida imperdiet congue. Proin vitae pretium
-           augue. Donec est sem, mattis et blandit ac, blandit at arcu. Donec tempus tincidunt 
-           suscipit. Suspendisse eu vulputate lacus.</p>
-      	</div>
-      	<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-      		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vehicula ipsum non leo 
-          tristique eget facilisis lacus commodo. Curabitur vitae justo lorem, non ornare nibh. 
-          Pellentesque pretium, tellus ac ultrices faucibus, nibh mauris dapibus lorem, vitae 
-          viverra nisl elit sit amet libero. Nam eu blandit risus.</p>
-      		<p>Phasellus imperdiet mattis nulla. Integer gravida imperdiet congue. Proin vitae pretium
-           augue. Donec est sem, mattis et blandit ac, blandit at arcu. Donec tempus tincidunt 
-           suscipit. Suspendisse eu vulputate lacus.</p>
-      	</div>
+        <div class="col-xs-11 col-sm-11 col-md-11 col-lg-11 col-xs-offset-1 col-sm-offset-1 col-md-offset-1 col-lg-offset-1">
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
+            <h2>BlazRobar.com</h2>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vehicula ipsum non leo 
+            tristique eget facilisis lacus commodo. Curabitur vitae justo lorem, non ornare nibh. 
+            Pellentesque pretium, tellus ac ultrices faucibus, nibh mauris dapibus lorem, vitae 
+            viverra nisl elit sit amet libero. Nam eu blandit risus.</p>
+            <p>Phasellus imperdiet mattis nulla. Integer gravida imperdiet congue. Proin vitae pretium
+             augue. Donec est sem, mattis et blandit ac, blandit at arcu. Donec tempus tincidunt 
+             suscipit. Suspendisse eu vulputate lacus.</p>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vehicula ipsum non leo 
+            tristique eget facilisis lacus commodo. Curabitur vitae justo lorem, non ornare nibh. 
+            Pellentesque pretium, tellus ac ultrices faucibus, nibh mauris dapibus lorem, vitae 
+            viverra nisl elit sit amet libero. Nam eu blandit risus.</p>
+            <p>Phasellus imperdiet mattis nulla. Integer gravida imperdiet congue. Proin vitae pretium
+             augue. Donec est sem, mattis et blandit ac, blandit at arcu. Donec tempus tincidunt 
+             suscipit. Suspendisse eu vulputate lacus.</p>
+          </div>
+        </div>
       </div>
     </div>
 
