--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       	<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 col-xs-offset-1 col-sm-offset-1 
         col-md-offset-1 col-lg-offset-1"><h4>www.BlazRobar.com</h4></div>
         <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xs-offset-3 col-sm-offset-3 
-        col-md-offset-3 col-lg-offset-3"> <span>&#062</span> </div>
+        col-md-offset-3 col-lg-offset-3"> <a href="#"><span>&#062</span></a> </div>
       </div>
     </div>
     <div class="container psd-files"> 
@@ -55,7 +55,7 @@
           <span>I'm like the Robin Hood of PSD files</span>
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 crimson">
-          &#062
+          <a href="#">&#062</a>
         </div>
       </div>
     </div>
@@ -74,7 +74,8 @@
     </div>
     <div class="container text-block"> 
       <div class="row">
-        <div class="col-xs-11 col-sm-11 col-md-11 col-lg-11 col-xs-offset-1 col-sm-offset-1 col-md-offset-1 col-lg-offset-1">
+        <div class="col-xs-11 col-sm-11 col-md-11 col-lg-11 col-xs-offset-1 col-sm-offset-1 
+        col-md-offset-1 col-lg-offset-1">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
             <h2>BlazRobar.com</h2>
           </div>
@@ -99,25 +100,5 @@
         </div>
       </div>
     </div>
-
-	
-    	<div class="pet">1212</div>
-	</body>
-	<!-- <div class="pet">1212</div>
-http://www.blazrobar.com/
-
-http://font-family.ru/luchshie-besplatnye-psd-makety-sajtov-dlya-verstki/
-	-->
+ 	</body>
 </html>
-
-
-
-
-
-
-<!--    Адаптивные Вспомогатели
-
-
-http://bootstrap-3.ru/css.php#responsive-utilities
-
- -->
