--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       	<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 col-xs-offset-1 col-sm-offset-1 
         col-md-offset-1 col-lg-offset-1"><h4>www.BlazRobar.com</h4></div>
         <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xs-offset-3 col-sm-offset-3 
-        col-md-offset-3 col-lg-offset-3"> <a href="#"><span>&#062</span></a> </div>
+        col-md-offset-3 col-lg-offset-3"> <a href="#"><span> &#062 </span></a> </div>
       </div>
     </div>
     <div class="container psd-files"> 
@@ -55,7 +55,7 @@
           <span>I'm like the Robin Hood of PSD files</span>
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 crimson">
-          <a href="#">&#062</a>
+          <a href="#"> &#062 </a>
         </div>
       </div>
     </div>
@@ -63,13 +63,13 @@
       <div class="row">
       	<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 bar">
       		<a href="#">
-      	   	<div class="rectangle"><img src="img/pict/purpur.png" alt="" class="img-responsive"></div> 
+      	   	<div class="rectangle"><img src="img/pict/purpur.png" alt="" class="img-responsive"/></div> 
 	       	</a>
 	      </div>
       	<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 bar "><img src="img/pict/citi.jpg" 
-        class="img-responsive" alt="Responsive image"></div>
+        class="img-responsive" alt="Responsive image"/></div>
       	<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 bar"><img src="img/pict/girl.jpg" 
-        class="img-responsive" alt="Responsive image"></div>
+        class="img-responsive" alt="Responsive image"/></div>
       </div>
     </div>
     <div class="container text-block"> 
